--- a/SPP/parser/Parser_WF/webService/Views/Home/Index.cshtml
+++ b/SPP/parser/Parser_WF/webService/Views/Home/Index.cshtml
@@ -1,22 +1,29 @@
 ﻿<div>
     <h1>Проверка работы веб-службы</h1>
 </div>
-
 <div>
     <h2>Загрузка курса валюты</h2>
     <input type="button" value="Загрузить" onclick="find();" />
-    <p id="product" />
+    <p id="сourse" />
 </div>
-
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
 <script>
     function find() {
-        $.getJSON(uri + '/api/Get')
+        $.getJSON( 'http://localhost:58591/' + 'api/Rate')
             .done(function (data) {
-                $('#product').text(formatItem(data));
-            })
+                console.log(data);
+                $('#сourse').html(formatItem(data));
+            }
+            )
             .fail(function (jqXHR, textStatus, err) {
-                $('#product').text('Error: ' + err);
+                $('#сourse').text('Error: ' + err);
             });
+    }
+    function formatItem(items) {
+        var result = '';
+        $.each(items, function (index, item) {
+            result+=item.CurrencyName + ': $' + item.CurrencyValue +'<br>';
+        });
+        return result;
     }
 </script>
